unpackaged/main/default/objects/Credit_Memo_ICS__c/Credit_Memo_ICS__c.object-meta.xml
<CustomObject>
    <label>Credit Memo</label>
    <nameField>
        <displayFormat>CM - {00000}</displayFormat>
        <label>Credit_Memo No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Memo</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>