unpackaged/main/default/objects/Credit_Memo_ICS__c/fields/Additional_Approver_Email_ID__c.field-meta.xml
<CustomField>
    <fullName>Additional_Approver_Email_ID__c</fullName>
    <label>Additional Approver Email ID</label>
    <type>Email</type>
</CustomField>