unpackaged/main/default/objects/Credit_Memo_ICS__c/fields/Additional_Approver_Name__c.field-meta.xml
<CustomField>
    <fullName>Additional_Approver_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Additional Approver Name</label>
    <referenceTo>Employees__c</referenceTo>
    <relationshipName>Credit_Memo_ICS5</relationshipName>
    <type>Lookup</type>
</CustomField>