unpackaged/main/default/objects/Credit_Memo_ICS__c/fields/Amount_w_psp__c.field-meta.xml
<CustomField>
    <fullName>Amount_w_psp__c</fullName>
    <label>$ Amount w/psp</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>