unpackaged/main/default/objects/Credit_Memo_ICS__c/fields/AR1_Approver_Comments__c.field-meta.xml
<CustomField>
    <fullName>AR1_Approver_Comments__c</fullName>
    <label>AR1 Approver Comments</label>
    <type>TextArea</type>
</CustomField>