unpackaged/main/default/objects/Credit_Memo_ICS__c/fields/AR2_Approver_Comments__c.field-meta.xml
<CustomField>
    <fullName>AR2_Approver_Comments__c</fullName>
    <label>AR2 Approver Comments</label>
    <type>TextArea</type>
</CustomField>