unpackaged/main/default/objects/Credit_Memo_ICS__c/fields/AR2_Approver_Email_ID__c.field-meta.xml
<CustomField>
    <fullName>AR2_Approver_Email_ID__c</fullName>
    <label>AR2 Approver Email ID</label>
    <type>Email</type>
</CustomField>