unpackaged/main/default/objects/Credit_Memo_ICS__c/fields/AR2_Approver_Name__c.field-meta.xml
<CustomField>
    <fullName>AR2_Approver_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AR2 Approver Name</label>
    <referenceTo>Employees__c</referenceTo>
    <relationshipName>Credit_Memo_ICS3</relationshipName>
    <type>Lookup</type>
</CustomField>