unpackaged/main/default/objects/Credit_Memo_ICS__c/fields/Case_Sales_Channel__c.field-meta.xml
<CustomField>
    <fullName>Case_Sales_Channel__c</fullName>
    <formula>Text(CSI_ICS__r.Sales_Channel__c)</formula>
    <label>Case Sales Channel</label>
    <type>Text</type>
</CustomField>