unpackaged/main/default/objects/Credit_Memo_ICS__c/fields/Credit_Memo_Reason__c.field-meta.xml
<CustomField>
    <fullName>Credit_Memo_Reason__c</fullName>
    <label>Credit Memo Reason</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accounts Receivables Billing Error: CM ERROR</fullName>
            </value>
            <value>
                <fullName>Bad Debt: CM</fullName>
            </value>
            <value>
                <fullName>Billed Wrong Customer/Show: CM ERROR</fullName>
            </value>
            <value>
                <fullName>Cancel Refund Check: CM ERROR</fullName>
            </value>
            <value>
                <fullName>Cancelled/Didn&#39;t Attend Show: CM</fullName>
            </value>
            <value>
                <fullName>Didn&#39;t Order:CM</fullName>
            </value>
            <value>
                <fullName>Discount Given to Customer: CM</fullName>
            </value>
            <value>
                <fullName>Duplicate Billing: CM ERROR</fullName>
            </value>
            <value>
                <fullName>Good Faith/Settlement/In Short Pd/PO Honored: CM</fullName>
            </value>
            <value>
                <fullName>Insufficient/Incomplete Documentation: CM</fullName>
            </value>
            <value>
                <fullName>Legal Settlement: CM</fullName>
            </value>
            <value>
                <fullName>Logistics Good Faith/Settlement: CM</fullName>
            </value>
            <value>
                <fullName>Operations Error: CM</fullName>
            </value>
            <value>
                <fullName>Order Entry Error: CM</fullName>
            </value>
            <value>
                <fullName>Outbound Quote Didn&#39;t Match IB: CM</fullName>
            </value>
            <value>
                <fullName>Sales Tax Error: CM ERROR</fullName>
            </value>
            <value>
                <fullName>Service Failure/Item(s) not Received: CM</fullName>
            </value>
            <value>
                <fullName>Should be Billed to Assn: CM</fullName>
            </value>
            <value>
                <fullName>Supervision Charged in Error: CM</fullName>
            </value>
            <value>
                <fullName>Surcharge/Off Target Doesn&#39;t Apply: CM</fullName>
            </value>
            <value>
                <fullName>Tax Exempt: CM ERROR</fullName>
            </value>
            <value>
                <fullName>Trans/Discount not Applied: CM</fullName>
            </value>
            <value>
                <fullName>Wrong Price/Quote/Rate: CM</fullName>
            </value>
            <value>
                <fullName>Wrong Product: CM</fullName>
            </value>
            <value>
                <fullName>Wrong Qty/Weight/Hours: CM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>