unpackaged/main/default/objects/Credit_Memo_ICS__c/fields/Credit_Memo_Total_Amount_del__c.field-meta.xml
<CustomField>
    <fullName>Credit_Memo_Total_Amount_del__c</fullName>
    <formula>CSI_ICS__r.Credit_Memo_Total_Amount__c</formula>
    <label>Credit Memo Total Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>