unpackaged/main/default/objects/Credit_Memo_ICS__c/fields/CSI_ICS__c.field-meta.xml
<CustomField>
    <fullName>CSI_ICS__c</fullName>
    <label>CSI ICS</label>
    <referenceTo>Customer_Service_Inquiries_ICS__c</referenceTo>
    <relationshipName>ICS_Credit_Memo</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>