unpackaged/main/default/objects/Credit_Memo_ICS__c/fields/CSO_Approver_Email__c.field-meta.xml
<CustomField>
    <fullName>CSO_Approver_Email__c</fullName>
    <label>CSO Approver Email</label>
    <type>Email</type>
</CustomField>