unpackaged/main/default/objects/Credit_Memo_ICS__c/fields/CSO_Approver_Status__c.field-meta.xml
<CustomField>
    <fullName>CSO_Approver_Status__c</fullName>
    <label>CSO Approver Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>