unpackaged/main/default/objects/Credit_Memo_ICS__c/fields/Del_Additional_Approver__c.field-meta.xml
<CustomField>
    <fullName>Del_Additional_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Del_Additional Approver</label>
    <referenceTo>Employees__c</referenceTo>
    <relationshipName>Credit_Memo_ICS4Tcr</relationshipName>
    <type>Lookup</type>
</CustomField>