unpackaged/main/default/objects/Credit_Memo_ICS__c/fields/Del_Additional_Approver_Email__c.field-meta.xml
<CustomField>
    <fullName>Del_Additional_Approver_Email__c</fullName>
    <formula>Del_Additional_Approver__r.Email_Address__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Del_Additional Approver Email</label>
    <type>Text</type>
</CustomField>