unpackaged/main/default/objects/Credit_Memo_ICS__c/fields/Del_AR2_Approver__c.field-meta.xml
<CustomField>
    <fullName>Del_AR2_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Del_AR2 Approver</label>
    <referenceTo>Employees__c</referenceTo>
    <relationshipName>Credit_Memo_ICS9</relationshipName>
    <type>Lookup</type>
</CustomField>