unpackaged/main/default/objects/Credit_Memo_ICS__c/fields/Del_CSO_Approver__c.field-meta.xml
<CustomField>
    <fullName>Del_CSO_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Del CSO Approver</label>
    <referenceTo>Employees__c</referenceTo>
    <relationshipLabel>Credit Memo (Del CSO Approver)</relationshipLabel>
    <relationshipName>Credit_Memo1</relationshipName>
    <type>Lookup</type>
</CustomField>