unpackaged/main/default/objects/Credit_Memo_ICS__c/fields/Del_F_R_Approver__c.field-meta.xml
<CustomField>
    <fullName>Del_F_R_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Del_F&amp;R Approver</label>
    <referenceTo>Employees__c</referenceTo>
    <relationshipName>Credit_Memo_ICS7</relationshipName>
    <type>Lookup</type>
</CustomField>