unpackaged/main/default/objects/Credit_Memo_ICS__c/fields/Del_LOB_Approver__c.field-meta.xml
<CustomField>
    <fullName>Del_LOB_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Del_LOB Approver</label>
    <referenceTo>Employees__c</referenceTo>
    <relationshipName>Credit_Memo_ICS6</relationshipName>
    <type>Lookup</type>
</CustomField>