unpackaged/main/default/objects/Credit_Memo_ICS__c/fields/F_R_Approver_Comments__c.field-meta.xml
<CustomField>
    <fullName>F_R_Approver_Comments__c</fullName>
    <label>F&amp;R Approver Comments</label>
    <type>TextArea</type>
</CustomField>