unpackaged/main/default/objects/Credit_Memo_ICS__c/fields/F_R_Approver_Email_ID__c.field-meta.xml
<CustomField>
    <fullName>F_R_Approver_Email_ID__c</fullName>
    <label>F&amp;R Approver Email ID</label>
    <type>Email</type>
</CustomField>