unpackaged/main/default/objects/Credit_Memo_ICS__c/fields/F_R_Approver_Name__c.field-meta.xml
<CustomField>
    <fullName>F_R_Approver_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>F&amp;R Approver Name</label>
    <referenceTo>Employees__c</referenceTo>
    <relationshipName>Credit_Memo_ICS2</relationshipName>
    <type>Lookup</type>
</CustomField>