unpackaged/main/default/objects/Credit_Memo_ICS__c/fields/Justification_for_Credit_Memo_Request__c.field-meta.xml
<CustomField>
    <fullName>Justification_for_Credit_Memo_Request__c</fullName>
    <label>Justification for Credit Memo Request</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>