unpackaged/main/default/objects/Credit_Memo_ICS__c/fields/LOB_Approver_Comments__c.field-meta.xml
<CustomField>
    <fullName>LOB_Approver_Comments__c</fullName>
    <label>LOB Approver Comments</label>
    <type>TextArea</type>
</CustomField>