unpackaged/main/default/objects/Credit_Memo_ICS__c/fields/LOB_Approver_Email_ID__c.field-meta.xml
<CustomField>
    <fullName>LOB_Approver_Email_ID__c</fullName>
    <label>LOB Approver Email ID</label>
    <type>Email</type>
</CustomField>