unpackaged/main/default/objects/Credit_Memo_ICS__c/fields/LOB_Approver_Name__c.field-meta.xml
<CustomField>
    <fullName>LOB_Approver_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LOB Approver Name</label>
    <referenceTo>Employees__c</referenceTo>
    <relationshipName>Credit_Memo_ICS1</relationshipName>
    <type>Lookup</type>
</CustomField>