unpackaged/main/default/objects/Credit_Memo_ICS__c/fields/Total_CM_Curreny__c.field-meta.xml
<CustomField>
    <fullName>Total_CM_Curreny__c</fullName>
    <formula>CSI_ICS__r.Credit_Memo_Total_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total CM Curreny</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>