unpackaged/main/default/objects/Credit_Memo_ICS__c/validationRules/ICS_CM_Cannot_be_Modified.validationRule-meta.xml
<ValidationRule>
    <fullName>ICS_CM_Cannot_be_Modified</fullName>
    <active>true</active>
    <errorConditionFormula>AND( OR
(
ISPICKVAL( CSI_ICS__r.Case_Approval_Status__c , &#39;Case Approved&#39;),
ISPICKVAL( CSI_ICS__r.Case_Approval_Status__c , &#39;Requestor Submitted&#39; ), 
ISPICKVAL( CSI_ICS__r.Case_Approval_Status__c , &#39;LOB Submitted&#39; ), 
ISPICKVAL( CSI_ICS__r.Case_Approval_Status__c , &#39;F&amp;R Submitted&#39; ), 
ISPICKVAL( CSI_ICS__r.Case_Approval_Status__c , &#39;AR1 Submitted&#39; ), 
ISPICKVAL( CSI_ICS__r.Case_Approval_Status__c , &#39;AR2 Submitted&#39; ) 
), 
OR(ISCHANGED(Amount_w_psp__c ), 
ISCHANGED( Tax_Amount__c ), 
ISCHANGED( Billing_ID__c ), 
ISCHANGED( Sales_Order__c ), 
ISCHANGED( Logistics_BOL__c ), 
ISCHANGED(Justification_for_Credit_Memo_Request__c ), 
ISCHANGED( Credit_Memo_Reason__c ), 
ISCHANGED( Credit_LOB__c )
))</errorConditionFormula>
    <errorMessage>Case is Already Submitted for Approval. 
You don&#39;t have access to Modify.</errorMessage>
</ValidationRule>