unpackaged/main/default/objects/Credit_Memo_ICS__c/validationRules/ICS_Logistics_BOL_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>ICS_Logistics_BOL_Mandatory</fullName>
    <active>true</active>
    <description>If LOB is Logistics and Logistics BOL# mandatory</description>
    <errorConditionFormula>IF(
    AND(
        TEXT(Credit_LOB__c) = &quot;LOGISTICS&quot;, 
        ISBLANK( Logistics_BOL__c)), True, False
 )</errorConditionFormula>
    <errorMessage>Please Enter Logistics BOL#</errorMessage>
</ValidationRule>